# dissertation

./: .gitignore  .nojekyll  0-intro.html  0-intro.qmd  01-intro.qmd  02-structures-spaces.html  02-structures-spaces.qmd  03-proj-inverse.html  03-proj-inverse.qmd  04-forest-pursuit.html  04-forest-pursuit.qmd  04-ordered.qmd  05-ordered.html  1-00-structures-spaces.html  1-00-structures-spaces.qmd  1-01-graph-obs.html  1-01-graph-obs.qmd  1-01-matrix-meas.html  1-01-matrix-meas.qmd  1-02-graph-obs.html  1-02-hyper-cooc.html  1-02-hyper-cooc.qmd  1-02-projection.qmd  1-03-inverse.qmd  1-03-proj-inverse.html  1-03-proj-inverse.qmd  1-03-projection.qmd  1-03-recovery-road.html  1-03-recovery-road.qmd  2-00-recovery.html  2-00-recovery.qmd  2-01-rand-sf.html  2-01-rand-sf.qmd  2-02-forest-pursuit.html  2-02-forest-pursuit.qmd  2-03-latent-forest-alloc.html  2-04-forest-pursuit.html  2-05-latent-forest-alloc.html  2-05-latent-forest-alloc.qmd  3-00-application-future.html  (+25 more)
.dvc/: config
codefigs/: bp.tex  collab.tex  kcg.tex  obs-set.tex  stack-bow.tex  stack-markov.tex  stack-net.tex  stack-tree.tex
codefigs/resources/: edges.csv  vertices.csv  vertices_.csv  vertices_a.csv  vertices_b.csv  vertices_c.csv
content/: 0-intro.html  0-intro.qmd  00-intro.html  00-intro.qmd  09-conclusion.html  09-conclusion.qmd
content/codefigs/: bp.tex  collab.tex  graphs.qmd  inject-plan.tex  kcg.tex  obs-cascade.tex  obs-ordered.tex  obs-set.tex  qualitative.qmd  results.qmd  spring-net.tex  stack-bow.tex  stack-markov.tex  stack-net.tex  stack-tree.tex  sum-outer.tex
content/part1/: 1-01-matrix-meas.html  1-01-matrix-meas.qmd  1-02-graph-obs.html  1-02-graph-obs.qmd  1-03-recovery-road.html  1-03-recovery-road.qmd  fig-biadj.qmd  fig-edgespace.qmd  fig-incidence.qmd
content/part2/: 2-01-rand-sf.html  2-01-rand-sf.qmd  2-02-forest-pursuit.html  2-02-forest-pursuit.qmd  2-03-latent-forest-alloc.html  2-03-latent-forest-alloc.qmd  2-04-rand-sf.html  2-04-rand-sf.qmd  2-05-forest-pursuit.html  2-05-forest-pursuit.qmd  2-06-latent-forest-alloc.html  2-06-latent-forest-alloc.qmd  alg-efm.qmd  (+3 more)
data/: .gitignore  complex-networks.yaml.dvc  efm-fp-logodds.csv.dvc  evaluations.dvc
rebut/: rebut.qmd
resource/: _toc.qmd  custom.scss  flushright.html  pubs.bib  slides.scss
(+39 files in other folders)
