[project]
authors = [{name = "Rachael T. Sexton", email = "gh@rtbs.dev"}]
name = "dissertation"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["jupyter-tikz>=0.5.6,<0.6"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
dissertation = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipykernel = ">=6.29.5,<7"
networkx = ">=3.4.2,<4"
numpy = ">=2.2.4,<3"
matplotlib = ">=3.10.1,<4"
scipy = ">=1.15.2,<2"
netgraph = ">=4.13.2,<5"
pygraphviz = ">=1.14,<2"
poppler = ">=25.2.0,<26"
