[project]
authors = [{name = "Rachael T. Sexton", email = "gh@rtbs.dev"}]
name = "dissertation"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["jupyter-tikz>=0.5.6,<0.6", "network2tikz>=0.1.8,<0.2", "numpyarray-to-latex>=0.1.0,<0.2", "mendr @ git+https://github.com/rtbs-dev/mendr.git", "adjusttext>=1.3.0,<2", "affinis @ git+https://github.com/rtbs-dev/affinis"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
dissertation = { path = ".", editable = true }
ipykernel = ">=6.29.5,<7"
networkx = ">=3.4.2,<4"
numpy = ">=2.2.4,<3"
matplotlib = ">=3.10.1,<4"
netgraph = ">=4.13.2,<5"
pandas = ">=2.2.3,<3"
dvc = ">=3.59.1,<4"
dvc-s3 = ">=3.2.0,<4"
awkward = ">=2.8.1,<3"
akimbo = ">=2024.12.0,<2025"
seaborn = ">=0.13.2,<0.14"

[tool.pixi.tasks]

[tool.pixi.dependencies]
poppler = ">=25.2.0,<26"
pygraphviz = ">=1.14,<2"

[tool.hatch.metadata]
allow-direct-references = true
